--- a/src/turbulence/CMakeLists.txt
+++ b/src/turbulence/CMakeLists.txt
@@ -62,3 +62,4 @@ add_library(turbulence
 target_link_libraries(turbulence PRIVATE util)
 target_include_directories(turbulence PUBLIC $<BUILD_INTERFACE:${CMAKE_CURRENT_BINARY_DIR}/modules> $<INSTALL_INTERFACE:include>)
 add_library(gotm::turbulence ALIAS turbulence)
+set_property(TARGET turbulence PROPERTY FOLDER gotm)
