--- a/src/turbulence/CMakeLists.txt
+++ b/src/turbulence/CMakeLists.txt
@@ -63,3 +63,9 @@ target_link_libraries(turbulence PRIVATE util)
 target_include_directories(turbulence PUBLIC $<BUILD_INTERFACE:${CMAKE_CURRENT_BINARY_DIR}/modules> $<INSTALL_INTERFACE:include>)
 add_library(gotm::turbulence ALIAS turbulence)
 set_property(TARGET turbulence PROPERTY FOLDER gotm)
+
+install(TARGETS turbulence 
+   EXPORT gotmConfig
+   LIBRARY DESTINATION lib 
+   ARCHIVE DESTINATION lib
+)
