--- a/src/gotm/CMakeLists.txt
+++ b/src/gotm/CMakeLists.txt
@@ -12,3 +12,4 @@ endif()
 if(GOTM_USE_SEAGRASS)
    target_link_libraries(gotm PUBLIC seagrass)
 endif()
+set_property(TARGET gotm PROPERTY FOLDER gotm)
