--- a/src/input/CMakeLists.txt
+++ b/src/input/CMakeLists.txt
@@ -3,3 +3,4 @@ add_library(input
    input_netcdf.F90
 )
 target_link_libraries(input PRIVATE util output_manager)
+set_property(TARGET input PROPERTY FOLDER gotm)
