use top-level FABM CMakeLists.txt

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -44,7 +44,7 @@ if(GOTM_USE_FABM)
       find_path(FABM_BASE src/fabm.F90 HINTS ${CMAKE_CURRENT_LIST_DIR}/extern/fabm DOC "Path to FABM source directory.")
       set(FABM_EMBED_VERSION ${GOTM_EMBED_VERSION} CACHE BOOL "Embed FABM version information" FORCE)
       set(FABM_FORCED_HOST gotm)
-      add_subdirectory("${FABM_BASE}/src" "${CMAKE_CURRENT_BINARY_DIR}/extern/fabm")
+      add_subdirectory("${FABM_BASE}" extern/fabm)
       mark_as_advanced(CLEAR FABM_BASE)
    endif()
 endif(GOTM_USE_FABM)
