do not build gotm_fabm_io if GOTM_BUILD_LIBRARIES_ONLY

--- a/src/fabm/CMakeLists.txt
+++ b/src/fabm/CMakeLists.txt
@@ -4,11 +4,13 @@ add_library(gotm_fabm
 target_link_libraries(gotm_fabm PUBLIC fabm PRIVATE util field_manager)
 set_property(TARGET gotm_fabm PROPERTY FOLDER gotm)
 
-add_library(gotm_fabm_io
-            gotm_fabm_input.F90
-)
-target_link_libraries(gotm_fabm_io PRIVATE input gotm_fabm fabm)
-set_property(TARGET gotm_fabm_io PROPERTY FOLDER gotm)
+if(NOT GOTM_BUILD_LIBRARIES_ONLY)
+   add_library(gotm_fabm_io
+               gotm_fabm_input.F90
+   )
+   target_link_libraries(gotm_fabm_io PRIVATE input gotm_fabm fabm)
+   set_property(TARGET gotm_fabm_io PROPERTY FOLDER gotm)
+endif()
 
 install(TARGETS gotm_fabm 
    EXPORT gotmConfig
