--- a/src/turbulence/CMakeLists.txt
+++ b/src/turbulence/CMakeLists.txt
@@ -60,6 +60,7 @@ add_library(turbulence
    variances.F90
 )
 target_link_libraries(turbulence PRIVATE util)
+target_include_directories(turbulence PUBLIC $<BUILD_INTERFACE:$<TARGET_PROPERTY:turbulence,Fortran_MODULE_DIRECTORY>> $<INSTALL_INTERFACE:include>)
 add_library(gotm::turbulence ALIAS turbulence)
 set_property(TARGET turbulence PROPERTY FOLDER gotm)
 
