--- a/src/input/CMakeLists.txt
+++ b/src/input/CMakeLists.txt
@@ -1,6 +1,6 @@
-add_library(input
+add_library(input_manager
    input.F90
    input_netcdf.F90
 )
-target_link_libraries(input PRIVATE util output_manager)
-set_property(TARGET input PROPERTY FOLDER gotm)
+target_link_libraries(input_manager PRIVATE util output_manager)
+set_property(TARGET input_manager PROPERTY FOLDER gotm)
