--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -3,12 +3,12 @@ include_directories(BEFORE ${PROJECT_SOURCE_DIR}/include)
 add_executable(test_airsea EXCLUDE_FROM_ALL
                test_airsea.F90
               )
-target_link_libraries(test_airsea PRIVATE util airsea input)
+target_link_libraries(test_airsea PRIVATE util airsea input_manager)
 
 add_executable(test_albedo EXCLUDE_FROM_ALL
                test_albedo.F90
               )
-target_link_libraries(test_albedo PRIVATE util airsea input)
+target_link_libraries(test_albedo PRIVATE util airsea input_manager)
 
 add_executable(test_eqstate EXCLUDE_FROM_ALL
                test_eqstate.F90
