--- a/src/fabm/CMakeLists.txt
+++ b/src/fabm/CMakeLists.txt
@@ -3,6 +3,7 @@ add_library(gotm_fabm
 )
 target_link_libraries(gotm_fabm PUBLIC fabm PRIVATE util field_manager)
 target_include_directories(gotm_fabm PUBLIC $<BUILD_INTERFACE:$<TARGET_PROPERTY:gotm_fabm,Fortran_MODULE_DIRECTORY>> $<INSTALL_INTERFACE:include>)
+add_library(gotm::gotm_fabm ALIAS gotm_fabm)
 set_property(TARGET gotm_fabm PROPERTY FOLDER gotm)
 
 add_library(gotm_fabm_io
