OTPS: ready for use with namelist constituent configuration

--- a/src/observations/CMakeLists.txt
+++ b/src/observations/CMakeLists.txt
@@ -1,11 +1,14 @@
-# can maybe be done more pretty -  the problem is that otsp does not have a CMakeLists.txt file
 if(GOTM_USE_OTPS)
-   set (OTPS gotm_otps.F90
-             ${OTPS_BASE}/constit.h 
-             ${OTPS_BASE}/derived_types.h 
-             ${OTPS_BASE}/subs.f90)
+   add_library(otps2
+      ${OTPS_BASE}/constit.h 
+      ${OTPS_BASE}/derived_types.h 
+      ${OTPS_BASE}/subs.f90
+   )
    add_definitions(-D_OTPS_)
+   include_directories(AFTER ${OTPS_BASE})
+   set (OTPS gotm_otps.F90)
 endif()
+
 add_library(observations
    analytical_profile.F90
    const_NNS.F90
@@ -14,16 +17,7 @@ add_library(observations
    ${OTPS}
 )
 target_link_libraries(observations PRIVATE util input_manager)
+if(GOTM_USE_OTPS)
+   target_link_libraries(observations PRIVATE otps2)
+endif()
 set_property(TARGET observations PROPERTY FOLDER gotm)
-
-#if(GOTM_USE_OTPS)
-#   remove_definitions(-D_OTPS_)
-#endif()
-
-#if(GOTM_USE_OTPS)
-#   add_subdirectory("${OTPS_BASE}" otps)
-#   target_link_libraries(observations PRIVATE otps)
-#endif()
-
-#add_subdirectory(otps)
-#target_link_libraries(observations PRIVATE otps)
