STIM: added infrastructure for using Simple Thermodynamic Ice Models - STIM

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -38,6 +38,9 @@ endif()
 if(GOTM_USE_FABM)
   add_definitions(-D_FABM_)
 endif()
+if(GOTM_USE_STIM)
+  add_definitions(-D_ICE_)
+endif()
 if(GOTM_USE_SEAGRASS)
    add_definitions(-DSEAGRASS)
 endif()
