--- a/src/gotm/CMakeLists.txt
+++ b/src/gotm/CMakeLists.txt
@@ -9,6 +9,9 @@ target_link_libraries(gotm PUBLIC util airsea input_manager config meanflow turb
 if(GOTM_USE_FABM)
    target_link_libraries(gotm PUBLIC gotm_fabm gotm_fabm_io)
 endif()
+if(GOTM_USE_STIM)
+   target_link_libraries(gotm PUBLIC gotm_stim stim)
+endif()
 if(GOTM_USE_SEAGRASS)
    target_link_libraries(gotm PUBLIC seagrass)
 endif()
