--- a/src/fabm/CMakeLists.txt
+++ b/src/fabm/CMakeLists.txt
@@ -1,7 +1,7 @@
 add_library(gotm_fabm
    gotm_fabm.F90
 )
-target_link_libraries(gotm_fabm PUBLIC fabm PRIVATE util field_manager yaml)
+target_link_libraries(gotm_fabm PUBLIC fabm field_manager PRIVATE util yaml)
 target_include_directories(gotm_fabm PUBLIC $<BUILD_INTERFACE:$<TARGET_PROPERTY:gotm_fabm,Fortran_MODULE_DIRECTORY>> $<INSTALL_INTERFACE:include>)
 add_library(gotm::gotm_fabm ALIAS gotm_fabm)
 set_property(TARGET gotm_fabm PROPERTY FOLDER gotm)
