--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -10,6 +10,11 @@ add_executable(test_albedo EXCLUDE_FROM_ALL
               )
 target_link_libraries(test_albedo PRIVATE util airsea input_manager)
 
+add_executable(test_bulk EXCLUDE_FROM_ALL
+               test_bulk.F90
+              )
+target_link_libraries(test_bulk PRIVATE util airsea input_manager)
+
 add_executable(test_eqstate EXCLUDE_FROM_ALL
                test_eqstate.F90
               )
