--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,6 +24,8 @@ endif()
 # User-configurable options
 # ----------------------------
 
+option(GOTM_USE_CVMIX "Include support for the CVMix turbulence closure models (github.com/CVMix)" ON)
+
 option(GOTM_USE_FABM "Include support for Framework for Aquatic Biogeochemical Models (fabm.net)" ON)
 
 option(GOTM_USE_STIM "Include support for Simple Thermodynamic Ice Models - STIM" OFF)
@@ -52,6 +54,15 @@ else()
    mark_as_advanced(FLEXOUT_USE_NetCDF)
    add_subdirectory("${CMAKE_CURRENT_LIST_DIR}/extern/flexout" extern/flexout)
 endif()
+
+if(GOTM_USE_CVMIX)
+   if (NOT EXISTS "${CMAKE_CURRENT_LIST_DIR}/extern/CVMix-src/CMakeLists.txt")
+      message(FATAL_ERROR "CVMix not found at extern/CVMix-src. Please retrieve this submodule first by running \"git submodule update --init\" within your GOTM source directory - followed by \"git pull --recurse-submodules\".")
+   else()
+#     mark_as_advanced(FORCE CVMIX_BASE CVMIX_EMBED_VERSION)
+      add_subdirectory("${CMAKE_CURRENT_LIST_DIR}/extern/CVMix-src" extern/CVMix-src)
+   endif()
+endif(GOTM_USE_CVMIX)
 
 if(GOTM_USE_FABM)
    mark_as_advanced(FORCE FABM_PREFIX FABM_BASE FABM_EMBED_VERSION)
