--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -69,6 +69,9 @@ add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/config config)
 add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/observations observations)
 add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/meanflow meanflow)
 add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/stokes_drift stokes_drift)
+if(GOTM_USE_CVMIX)
+    add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/cvmix cvmix)
+endif()
 
 if(GOTM_USE_SEAGRASS)
    add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/extras/seagrass seagrass)
