--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -60,6 +60,10 @@ if(GOTM_USE_FABM)
    add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/fabm fabm)
 endif()
 
+if(GOTM_USE_CVMIX)
+    add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/cvmix gotm_cvmix)
+endif()
+
 if(GOTM_BUILD_LIBRARIES_ONLY)
    return()
 endif()
@@ -69,9 +73,6 @@ add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/config config)
 add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/observations observations)
 add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/meanflow meanflow)
 add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/stokes_drift stokes_drift)
-if(GOTM_USE_CVMIX)
-    add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/cvmix cvmix)
-endif()
 
 if(GOTM_USE_SEAGRASS)
    add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/extras/seagrass seagrass)
