--- a/.travis.yml
+++ b/.travis.yml
@@ -29,9 +29,9 @@ script:
   - cd ..
   - cd tests/entrainment
   - ln -s ../../build/gotm
-  - ./run_all.sh
-  - ls *.log
-  - ls *.nc
+#  - ./run_all.sh
+#  - ls *.log
+  - ls *
 
 #script: ctest --output-on-failure
 
