--- a/.github/workflows/gotm.yml
+++ b/.github/workflows/gotm.yml
@@ -12,7 +12,7 @@ jobs:
       runs-on: ubuntu-latest
       steps:
       - name: Install dependencies
-        run: sudo apt-get install gfortran-${{ matrix.version }} python-numpy python-wheel
+        run: sudo apt-get install gfortran-${{ matrix.version }}
       - name: Clone gotm
         uses: actions/checkout@v2
         with:
@@ -24,4 +24,4 @@ jobs:
            path: cases
            repository: gotm-model/cases
       - name: Run all test cases
-        run: python3 cases/scripts/run_all.py --gotm_base=gotm --compiler=gfortran-${{ matrix.version }} -DGOTM_USE_STIM=ON -DGOTM_USE_NETCDF=OFF
+        run: python3 cases/scripts/run_all.py --show_logs --gotm_base=${GITHUB_WORKSPACE}/gotm --compiler=gfortran-${{ matrix.version }} -DGOTM_USE_STIM=ON -DGOTM_USE_NETCDF=OFF
