--- a/.github/workflows/gotm.yml
+++ b/.github/workflows/gotm.yml
@@ -24,4 +24,4 @@ jobs:
            path: cases
            repository: gotm-model/cases
       - name: Run all test cases
-        run: python3 cases/scripts/run_all.py --show_logs --gotm_base=${GITHUB_WORKSPACE}/gotm --compiler=gfortran-${{ matrix.version }} -DGOTM_USE_STIM=ON -DGOTM_USE_NetCDF=OFF
+        run: python3 -u cases/scripts/run_all.py --show_logs --gotm_base=gotm --compiler=gfortran-${{ matrix.version }} -DGOTM_USE_STIM=ON -DGOTM_USE_NetCDF=OFF ${{ matrix.cmake_args }}
