--- a/.github/workflows/gotm.yml
+++ b/.github/workflows/gotm.yml
@@ -4,7 +4,7 @@ jobs:
    gfortran:
       strategy:
          matrix:
-            version: [5, 6, 7, 8, 9]
+            version: [5, 6, 7, 8, 9, 10]
             include:
                - version: 8
                  cmake_args: -DFABM_USE_CONTIGUOUS=OFF
